# agentnet-cli

./: .gitignore  CLAUDE.md  README.md  marketplace.json  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish.yml
claude-plugin/: .mcp.json
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/agents/: marketplace.md
claude-plugin/hooks/: hooks.json
claude-plugin/skills/agentnet/: SKILL.md
docs/superpowers/plans/: 2026-05-09-hermes-native-plugin.md  2026-05-09-marketplace-cli-and-skill.md  2026-05-10-claude-native-plugin.md  2026-05-10-openclaw-native-plugin.md
docs/superpowers/specs/: 2026-05-09-hermes-native-plugin-design.md  2026-05-09-marketplace-cli-and-skill-design.md  (+2 more)
openclaw-plugin/: .mcp.json  index.js  openclaw.plugin.json  package.json
src/agentnet_cli/: __init__.py  config.py  connect.py  detect.py  disconnect.py  main.py  manifest.py  marketplace.py  paths.py  register.py  setup.py  status.py  updater.py
tests/: conftest.py  test_agent_cmd.py  test_claude.py  test_cli.py  test_codex.py  test_config.py  test_copilot.py  test_cursor.py  test_detect.py  test_discover_cmd.py  test_e2e.py  test_hermes.py  test_hermes_plugin.py  test_link_client.py  test_link_cmd.py  test_manifest.py  test_marketplace.py  test_mcp_pay_tools.py  test_mcp_tools.py  test_mpp_client.py  test_mpp_flow.py  test_openclaw.py  test_paths.py  test_pay_cmd.py  test_platform_client.py  test_register.py  test_server.py  test_session_cmd.py  test_spend_controls.py  test_updater.py  test_vscode.py  test_wallet_cmd.py
(+41 files in other folders)
